# rust_tips

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: show_notes.rs
src/: lib.rs
src/core/: mod.rs  note.rs
src/topics/basics/: flow_control.rs  functions.rs  mod.rs  ownership.rs  variables_types.rs
tests/: basics_tests.rs
